# BazelPlayground

./: .bazelrc  README.md  WORKSPACE.bazel
Issue0/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel
Issue0/Module1/: Source1.swift
Issue1/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel
Issue2/: .bazelrc  BUILD.bazel  Foo.swift  README.md  WORKSPACE.bazel
Issue2/FBSDKLoginKit/iOS/FBSDKLoginKit.framework/: Info.plist
SampleApp/: .bazelrc  BUILD.bazel  Info.plist  MODULE.bazel  README.md  WORKSPACE.bazel  build_and_test.sh  versions.bzl
SampleApp/Libraries/ASwiftModule/: BUILD.bazel
SampleApp/Libraries/ASwiftModule/Sources/: BuildType.swift
SampleApp/Libraries/SecondSwiftModule/: BUILD.bazel
SampleApp/Libraries/YetAnotherSwiftModule/: BUILD.bazel
SampleApp/Resources/: BUILD.bazel
SampleApp/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
SampleApp/Sources/: App.swift  AppDelegate.swift  ViewController.swift
genrule/: BUILD.bazel
ios_framework_missing_symbol/: BUILD.bazel  README.md
ios_framework_missing_symbol/Sources/: App.swift  Library.swift
