load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")
load("//:versions.bzl", "MINIMUM_OS_VERSION")

swift_library(
    name = "ASwiftModule",
    module_name = "ASwiftModule",
    srcs = glob(["Sources/*.swift"]),
    visibility = ["//visibility:public"],
)

ios_unit_test(
    name = "ASwiftModuleTests",
    srcs = glob([
        "Tests/**/*.swift",
    ]),
    minimum_os_version = MINIMUM_OS_VERSION,
    deps = [":ASwiftModule"],
)
