load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SecondSwiftModule",
    module_name = "SecondSwiftModule",
    srcs = glob([
        "Sources/**/*.swift",
    ]),
    deps = [
        "//Libraries/YetAnotherSwiftModule:YetAnotherSwiftModule",
    ],
    visibility = ["//:__pkg__"],
)
